<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hackaton.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.example.hackaton.ui.options.OptionsFragment"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_options" />

    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.hackaton.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/nav_achievements"
        android:name="com.example.hackaton.ui.achievements.AchievementsFragment"
        android:label="@string/menu_achievements"
        tools:layout="@layout/fragment_achievements" />
    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.hackaton.ui.information.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

</navigation>